--- a/base-R-template.Rmd
+++ b/base-R-template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Fix the title"
-author: "Your Name Here"
-date: "Add the date"
+author: "Madeline Mucciolo"
+date: "June 23 2023"
 output: 
     html_notebook
 ---
@@ -12,22 +12,31 @@ output:
 
 ```{r}
 data(iris)
-
+iris[[5]][10]
 ```
-
 
 #### Select the Species column in `iris` dataset and print the last 5 rows of that column
 ```{r}
-
+tail(iris$Species,5)
 ```
 
 
 #### What is the average Sepal Length of flowers with Petal widths greater than 1? 
 
 ```{r}
+library(tidyverse)
 
+petal_large<-
+  iris %>%
+  filter(Petal.Width>1)
 
+mean(petal_large$Sepal.Length)
 ```
+```{r}
+iris$Petal.Width>1
+```
+
+
 
 ### Question 2: For Loops
 
