--- a/base-R-template.Rmd
+++ b/base-R-template.Rmd
@@ -27,12 +27,16 @@ tail(iris$Species,5)
 mean(iris$Sepal.Length[iris$Petal.Width > 1])
 ```
 
+
 ### Question 2: For Loops
 
 #### Write a `for` loop that iterates over the numbers 1 to 10. If the number less than 5 print the multiple of 3 (multiply the number by 3), and if the number is greater than or equal to 5 print the multiple of 2 (multiply the number by 2). 
 
 ```{r}
-
+for(i in 1:10){
+  if(i<5){print(i*3)}
+  if(i>=5){print(i*2)}
+}
 ```
 
 ### Question 3: While loops
