--- a/base-R-template.Rmd
+++ b/base-R-template.Rmd
@@ -44,7 +44,11 @@ for(i in 1:10){
 #### Write a `while` loop that prints out random normal numbers with mean equal 1 and standard deviation 2 (use rnorm()) but stops (breaks) if you get a number bigger than 3. Do not change the value inside set.seeed.
 ```{r}
 set.seed(184)
-
+while(T){
+  num <- rnorm(1,mean=1,sd=2)
+  print(num)
+  if (num>3){break}
+}
 ```
 
 ### Question 4: for loops in data tables
